<resources>
    <string name="app_name">TimeLinter</string>
    <string name="accessibility_service_description">TimeLinter monitors browser activity to track time spent on websites and provide productivity insights.</string>
</resources>